[package]
name = "dnd-chartui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = {version="0.24.0", features=["all-widgets"]}
crossterm = "0.27.0"
serde = {version="1.0.195", features=["derive"]}
serde_json = "1.0.111"